--- a/src/main/resources/templates/login/cartForm.html
+++ b/src/main/resources/templates/login/cartForm.html
@@ -2,11 +2,99 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/header :: head}"/>
 <div th:replace="~{fragments/header :: header ('cart')}"/>
+<style>
+    .table_row_color:hover {
+        background-color: lightgray;
+    }
 
-판매리스트 출력하기
+    .table_title_fontcolor:hover {
+        background-color: lightgray;
+        color: darkviolet !important;
+        cursor: pointer;
+    }
+</style>
+<body>
+<div>
+    <div class="container">
+        <form class="row g-2" style="margin-top: 20px">
+            <div class="col-auto">
+                <select class="form-select">
+                    <option selected>정렬선택</option>
+                    <option>가격순</option>
+                    <option>추천순</option>
+                    <option>판매순</option>
+                    <option>추천순</option>
+                </select>
+            </div>
+            <div class="col-auto">
+                <button type="submit" class="btn btn-primary mb-3">확인</button>
+            </div>
+        </form>
 
+        <form>
+            <input type=checkbox value="C" onClick="check(this)">C 드라이브<br>
+            <input type=checkbox value="D" onClick="check(this)">D 드라이브<br>
+            <input type=checkbox value="E" onClick="check(this)">E 드라이브<br>
+            <input type=checkbox value="F" onClick="check(this)">F 드라이브<br>
+        </form>
 
-<div style="height: 1000px; margin-top: 20px;">
+        <script>
+            function check(box){
+                if(box.checked == true)
+                    window.statusbar = box.value + " 드라이브를 체크했습니다." //브라우저의 상태표시줄에 표시
+                else
+                    window.statusbar = box.value + " 드라이브의 체크를 해제했습니다."
+            }
+
+        </script>
+        <div style="max-height: 700px; min-height: 700px; overflow: scroll;">
+            <table class="table table-striped table-bordered">
+                <thead>
+                <tr>
+                    <th style="width: 7%">구매일</th>
+                    <th style="width: 40%">곡제목</th>
+                    <th style="width: 15%">만든이</th>
+                    <th style="width: 5%">악기</th>
+                    <th style="width: 5%">난이도</th>
+                    <th style="width: 5%">가격</th>
+                    <th style="width: 5%">조회수</th>
+                </tr>
+                </thead>
+                <tbody>
+           <!--     <tr class="table_row_color" th:each="musicList : ${paging}">
+                    <td th:text="${musicList.localDate}"></td>
+                    <td th:text="${musicList.musicList.title}" class="table_title_fontcolor"
+                        th:onclick="|location.href='@{/content (musicListId=${musicList.musicList.id}) }'|"></td>
+                    <td th:text="${musicList.musicList.memberNickname}"></td>
+                    <td th:text="${musicList.musicList.type}"></td>
+                    <td th:text="${musicList.musicList.level}"></td>
+                    <td th:text="${musicList.musicList.price}"></td>
+                    <td th:text="${musicList.musicList.likeCount}"></td>
+                </tr>-->
+                </tbody>
+            </table>
+        </div>
+
+    </div>
+
 </div>
+
+
+<form class="row g-2 justify-content-center" style="margin-bottom: 154px">
+    <div class="col-auto">
+        <select class="form-select">
+            <option selected>제목검색</option>
+            <option>글작성자</option>
+        </select>
+    </div>
+    <div class="col-3">
+        <input type="search" class="form-control" placeholder="악보를 검색하세요" aria-label="Search">
+    </div>
+
+    <div class="col-auto">
+        <button type="submit" class="btn btn-primary mb-3">확인</button>
+    </div>
+</form>
+</body>
 <div th:replace="~{fragments/footer :: footer}"/>
 </html>
