--- a/src/main/resources/templates/musicList/sellMusicListForm.html
+++ b/src/main/resources/templates/musicList/sellMusicListForm.html
@@ -20,9 +20,10 @@
             <div class="col-auto">
                 <select class="form-select">
                     <option selected>정렬선택</option>
-                    <option>낮은가격순</option>
-                    <option>높은가격순</option>
-                    <option>악보제목순</option>
+                    <option>가격순</option>
+                    <option>추천순</option>
+                    <option>판매순</option>
+                    <option>추천순</option>
                 </select>
             </div>
             <div class="col-auto">
@@ -39,12 +40,13 @@
             <table class="table table-striped table-bordered">
                 <thead>
                 <tr>
-                    <th style="width: 11%">판매일</th>
-                    <th style="width: 45%">곡제목</th>
+                    <th style="width: 7%">판매일</th>
+                    <th style="width: 40%">곡제목</th>
                     <th style="width: 15%">구매자Id</th>
-                    <th style="width: 7%">악기</th>
-                    <th style="width: 7%">난이도</th>
-                    <th style="width: 9%">가격</th>
+                    <th style="width: 5%">악기</th>
+                    <th style="width: 5%">난이도</th>
+                    <th style="width: 5%">가격</th>
+                    <th style="width: 5%">판매수</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -56,6 +58,7 @@
                     <td th:text="${musicList.musicList.type}"></td>
                     <td th:text="${musicList.musicList.level}"></td>
                     <td th:text="${musicList.musicList.price}"></td>
+                    <td th:text="${musicList.musicList.likeCount}"></td>
                 </tr>
                 </tbody>
             </table>
