--- a/src/main/resources/templates/login/signupForm.html
+++ b/src/main/resources/templates/login/signupForm.html
@@ -41,6 +41,7 @@
     }
 
 </style>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <div style="height: 810px">
     <body class="text-center">
     <main class="form-signin" style="margin-top: 210px">
@@ -64,6 +65,14 @@
                        th:if="${errors?.containsKey('pw')}" th:text="${errors['pw']}"></label>
             </div>
 
+
+            <div class="form-floating" style="margin-bottom: 30px">
+                <input type="password" class="form-control" id="pwCheck" name="pwCheck">
+                <label for="pwCheck">비밀번호확인하기</label>
+                <label class="field-error" for="id" style="margin-left: 130px"
+                       th:if="${errors?.containsKey('pwCheck')}" th:text="${errors['pwCheck']}"></label>
+            </div>
+
             <div class="form-floating" style="margin-bottom: 30px">
                 <input type="text" class="form-control" id="nickname" name="nickname"  th:field="*{nick}">
                 <label for="nickname">닉네임입력하세요</label>
@@ -81,6 +90,46 @@
     </body>
 
 </div>
+<script>
 
+    $(function(){
+        $('#pw').keyup(function(){
+            const pw = document.getElementById('pw');
+            const pwCheck = document.getElementById('pwCheck');
+            if($('#pwCheck').val()){
+                console.log("여기다1");
+                if($('#pw').val() === ($('#pwCheck').val())){
+                    console.log("여기다2");
+                    pw.style.cssText = "border-color: limegreen; border-width: 2px; outline: none;"
+                    pwCheck.style.cssText = "border-color: limegreen; border-width: 2px; outline: none;"
+                }else{
+                    console.log("여기다3");
+                    pw.style.cssText = "border-color: orangered; border-width: 2px; outline: none;"
+                    pwCheck.style.cssText = "border-color: orangered; border-width: 2px; outline: none;"
+                }
+               console.log("여기다4");
+            }
+        });
+
+        $('#pwCheck').keyup(function(){
+            const pw = document.getElementById('pw');
+            const pwCheck = document.getElementById('pwCheck');
+            if($('#pw').val()){
+                console.log("여기다6");
+                if($('#pw').val() === ($('#pwCheck').val())){
+                    console.log("여기다7");
+                    pw.style.cssText = "border-color: limegreen; border-width: 2px; outline: none;"
+                    pwCheck.style.cssText = "border-color: limegreen; border-width: 2px; outline: none;"
+                }else{
+                    console.log("여기다8");
+                    pw.style.cssText = "border-color: orangered; border-width: 2px; outline: none;"
+                    pwCheck.style.cssText = "border-color: orangered; border-width: 2px; outline: none;"
+                }
+                console.log("여기다9");
+            }
+        });
+
+    });
+</script>
 <div th:replace="~{fragments/footer :: footer}"/>
 </html>
