--- a/src/main/resources/templates/musicList/addMusicListForm.html
+++ b/src/main/resources/templates/musicList/addMusicListForm.html
@@ -56,8 +56,8 @@
 
 
         <div class="text-center" style="margin-top: 30px">
-            <button type="submit" class="btn btn-primary mb-3">악보등록</button>
-            <a href="/" class="btn btn-primary mb-3">취소</a>
+            <button type="submit" class="btn btn-lg btn-primary mb-3">악보등록</button>
+            <a href="/" class="btn btn-lg btn-primary mb-3">취소</a>
         </div>
 
     </form>
