--- a/src/main/resources/templates/musicList/sellMusicListForm.html
+++ b/src/main/resources/templates/musicList/sellMusicListForm.html
@@ -68,7 +68,7 @@
 
 </div>
 
-<ul class="pagination justify-content-center">
+<ul class="pagination justify-content-center" style="margin-top: 20px">
     <li class="page-item">
         <a class="page-link" th:if="${start==0}" th:href="@{|?page=${start}|}"> << </a>
     </li>
