--- a/src/main/resources/templates/login/cartForm.html
+++ b/src/main/resources/templates/login/cartForm.html
@@ -20,97 +20,96 @@
     .table_title_buyBtn:hover {
         background-color: deepskyblue;
     }
+
 </style>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <body>
-<div>
-    <div class="container">
-        <form class="row g-2" style="margin-top: 20px">
-            <div class="col-auto">
-                <select class="form-select">
-                    <option selected>정렬선택</option>
-                    <option>가격순</option>
-                    <option>추천순</option>
-                    <option>판매순</option>
-                    <option>추천순</option>
-                </select>
-            </div>
-            <div class="col-auto">
-                <button type="submit" class="btn btn-primary mb-3">확인</button>
-            </div>
-        </form>
-
-        <div style="max-height: 700px; min-height: 700px; overflow: scroll;">
-            <table class="table table-striped table-bordered">
-                <thead>
-                <tr>
-                    <th style="width: 3%">
-                        <input class="form-check-input" type="checkBox" name="check" onclick="checkAll(this)">
-                    </th>
-                    <th style="width: 5%">삭제</th>
-                    <th style="width: 5%">구매</th>
-                    <th style="width: 8%">추가일</th>
-                    <th style="width: 35%">곡제목</th>
-                    <th style="width: 15%">만든이</th>
-                    <th style="width: 5%">악기</th>
-                    <th style="width: 5%">난이도</th>
-                    <th style="width: 5%">가격</th>
-                    <th style="width: 5%">추천수</th>
-                    <th style="display: none">musicListId</th>
-                    <th style="display: none">cartListId</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr class="table_row_color" th:each="list : ${cartList}">
-                    <td>
-                        <input class="form-check-input" type="checkbox" name="check"
-                               onclick="checkOne(this)">
-                    </td>
-                    <td>
-                        <form method="post" th:action="@{/cartDelete}" onsubmit="return deleteSubmit()">
-                            <button class="table_title_deleteBtn" type="submit" style="border-width: thin"
-                                    th:name="cartId" th:value="${list.id}">삭제
-                            </button>
-                        </form>
-                    </td>
-                    <td id="btnBuy">
-                        <button class="table_title_buyBtn" style="border-width: thin"
-                                th:onclick="buySubmit([[${list.musicList.id}]], [[${list.musicList.price}]],
-                                 [[${memberCash}]], [[${list.id}]])" )>구매
-                        </button>
-                    </td>
-                    <td th:text="${list.localDate}"></td>
-                    <td th:text="${list.musicList.title}" class="table_title_fontcolor"
-                        th:onclick="|location.href='@{/content (musicListId=${list.musicList.id}) }'|"></td>
-                    <td th:text="${list.musicList.memberNickname}"></td>
-                    <td th:text="${list.musicList.type}"></td>
-                    <td th:text="${list.musicList.level}"></td>
-                    <td th:text="${list.musicList.price}"></td>
-                    <td th:text="${list.musicList.likeCount}"></td>
-                    <td style="display: none" th:text="${list.musicList.id}"></td>
-                    <td style="display: none" th:text="${list.id}"></td>
-                </tr>
-                </tbody>
-            </table>
+<div class="container">
+    <form class="row g-2" style="margin-top: 20px">
+        <div class="col-auto">
+            <select class="form-select">
+                <option selected>정렬선택</option>
+                <option>가격순</option>
+                <option>추천순</option>
+                <option>판매량</option>
+            </select>
         </div>
-
-    </div>
-
+        <div class="col-auto">
+            <button type="submit" class="btn btn-primary mb-3">확인</button>
+        </div>
+    </form>
 </div>
-
-<form class="row g-2 justify-content-center" style="margin-bottom: 154px; margin-top: 20px;">
-    <div class="col-7">
-        <button type="button" class="btn btn-lg btn-primary mb-3" id="btnTotal">합계 : 0원</button>
-    </div>
-    <div class="col-auto">
-        <button type="button" class="btn btn-lg btn-primary mb-3" onclick="btnCheckedDelete()">삭제하기</button>
-    </div>
-    <div class="col-auto">
-        <button type="button" class="btn btn-lg btn-primary mb-3" onclick="btnCheckedBuy()">구매하기</button>
-    </div>
-</form>
+<div class="container" style="max-height: 700px; min-height: 700px; overflow: scroll;">
+    <table class="table table-striped table-bordered">
+        <thead>
+        <tr>
+            <th style="width: 3%">
+                <input class="form-check-input" type="checkBox" name="check" onclick="checkAll(this)">
+            </th>
+            <th style="width: 5%">삭제</th>
+            <th style="width: 5%">구매</th>
+            <th style="width: 8%">추가일</th>
+            <th style="width: 30%">곡제목</th>
+            <th style="width: 15%">만든이</th>
+            <th style="width: 5%">악기</th>
+            <th style="width: 5%">난이도</th>
+            <th style="width: 5%">가격</th>
+            <th style="width: 5%">판매량</th>
+            <th style="width: 5%">추천수</th>
+            <th style="display: none">musicListId</th>
+            <th style="display: none">cartListId</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr class="table_row_color" th:each="list : ${cartList}">
+            <td>
+                <input class="form-check-input" type="checkbox" name="check"
+                       onclick="checkOne(this)">
+            </td>
+            <td>
+                <form method="post" th:action="@{/cartDelete}" onsubmit="return deleteSubmit()">
+                    <button class="table_title_deleteBtn" type="submit" style="border-width: thin"
+                            th:name="cartId" th:value="${list.id}">삭제
+                    </button>
+                </form>
+            </td>
+            <td id="btnBuy">
+                <button class="table_title_buyBtn" style="border-width: thin"
+                        th:onclick="buySubmit([[${list.musicList.id}]], [[${list.musicList.price}]],
+                                 [[${memberCash}]], [[${list.id}]])" )>구매
+                </button>
+            </td>
+            <td th:text="${list.createTime.substring(0, 10)}"></td>
+            <td th:text="${list.musicList.title}" class="table_title_fontcolor"
+                th:onclick="|location.href='@{/content (musicListId=${list.musicList.id}) }'|"></td>
+            <td th:text="${list.musicList.member.nickname}"></td>
+            <td th:text="${list.musicList.type}"></td>
+            <td th:text="${list.musicList.level}"></td>
+            <td th:text="${list.musicList.price}"></td>
+            <td th:text="${list.musicList.salesQuantity}"></td>
+            <td th:text="${list.musicList.likeCount}"></td>
+            <td style="display: none" th:text="${list.musicList.id}"></td>
+            <td style="display: none" th:text="${list.id}"></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+<div class="container">
+    <form class="row g-2 justify-content-center" style="margin-top: 20px">
+        <div class="col-7">
+            <button type="button" class="btn btn-lg btn-primary mb-3" id="btnTotal">합계 : 0원</button>
+        </div>
+        <div class="col-auto">
+            <button type="button" class="btn btn-lg btn-primary mb-3" onclick="btnCheckedDelete()">삭제하기</button>
+        </div>
+        <div class="col-auto">
+            <button type="button" class="btn btn-lg btn-primary mb-3" onclick="btnCheckedBuy()">구매하기</button>
+        </div>
+    </form>
+</div>
+<div style="margin-top: 190px"></div>
 </body>
-
+<div th:replace="~{fragments/footer :: footer}"/>
 <script type="text/javascript">
     let total = 0;
 
@@ -133,8 +132,8 @@
                         console.log(total);
                         btnTotal.innerText = "합계 = " + total + "원";
 
-                        const musicListId = row.cells[10].innerText;
-                        const cartListId = row.cells[11].innerText;
+                        const musicListId = row.cells[11].innerText;
+                        const cartListId = row.cells[12].innerText;
                         const input = document.createElement('input');
                         const input1 = document.createElement('input');
                         input.type = 'hidden';
@@ -148,10 +147,10 @@
                     }
                 }
             })
-            if (total >= memberCash){
+            if (total >= memberCash) {
                 alert('잔액이부족합니다');
                 return false;
-            }else{
+            } else {
                 document.body.appendChild(form);
                 form.submit();
             }
@@ -266,6 +265,4 @@
         })
     }
 </script>
-
-<div th:replace="~{fragments/footer :: footer}"/>
 </html>
