--- a/src/main/resources/templates/musicList/editMusicListForm.html
+++ b/src/main/resources/templates/musicList/editMusicListForm.html
@@ -12,7 +12,7 @@
 <div style="height: 1000px; margin-top: 20px">
     <form id="formId" class="w-50 container" enctype="multipart/form-data"
           method="post" th:action="@{/EditMusicList}" onsubmit="return updateSubmit()"
-          th:object="${updateMusicListFormDto}">
+          th:object="${musicListUpdateDto}">
 
         <label style="margin-top: 10px" for="title" class="form-label">제목 입력하세요</label>
         <label class="field-error" style="margin-left: 200px"
